add manual generator for plugins
Former-commit-id: 8e11e03a532adcd39b8f8f1865ae609a2f8e3df3

--- a/share/manual/plugins.html
+++ b/share/manual/plugins.html
@@ -5,9 +5,27 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-      <h1>Objects</h1>
-      <ul>
-      <li><a href="museScore.html">MuseScore</a></item>
-      </ul>
+<h2>Objects</h2>
+<ul>
+<li><a href="chord.html">Chord</a></li>
+<li><a href="chordrest.html">ChordRest</a></li>
+<li><a href="cursor.html">Cursor</a></li>
+<li><a href="element.html">Element</a></li>
+<li><a href="harmony.html">Harmony</a></li>
+<li><a href="measure.html">Measure</a></li>
+<li><a href="measurebase.html">MeasureBase</a></li>
+<li><a href="musescore.html">MuseScore</a></li>
+<li><a href="note.html">Note</a></li>
+<li><a href="pageformat.html">PageFormat</a></li>
+<li><a href="part.html">Part</a></li>
+<li><a href="qfile.html">QFile</a></li>
+<li><a href="qprocess.html">QProcess</a></li>
+<li><a href="rest.html">Rest</a></li>
+<li><a href="score.html">Score</a></li>
+<li><a href="scoreview.html">ScoreView</a></li>
+<li><a href="segment.html">Segment</a></li>
+<li><a href="staff.html">Staff</a></li>
+<li><a href="text.html">Text</a></li>
+<li><a href="timesig.html">TimeSig</a></li>
 </body>
 </html>
