plugin manual update
Former-commit-id: b1b6fcf79fec9f64249fab671e89d28bf5e76b3f

--- a/share/manual/element.html
+++ b/share/manual/element.html
@@ -5,8 +5,8 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>Element</h3>
-<h4>Methods</h4>
+<h3 class="object">Element</h3>
+<h4 class="groupA">Methods</h4>
 <div class="method">
 <code>virtual <b>Element* clone</b>()</code>
 </div>
@@ -19,9 +19,9 @@
 <code>static <b>Element* create</b>(ElementType type, Score*)</code>
 </div>
 <div class="mdescr"></div><par/>
-<h4>Properties</h4>
+<h4 class="groupB">Properties</h4>
 <div class="tab2">
-<table border="1" rules="all">
+<table border="1" rules="all" cellpadding="0" cellspacing="0">
 <tr><td><code>type</code></td><td><code>int</code></td><td>         element type</td></tr>
 <tr><td><code>parent</code></td><td><code>Element*</code></td><td>    parent in drawing hierarchy</td></tr>
 <tr><td><code>track</code></td><td><code>int</code></td><td></td></tr>
