--- a/share/manual/measure.html
+++ b/share/manual/measure.html
@@ -5,6 +5,15 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>Measure</h3>
+<h3 class="object">Measure</h3>
+<h4 class="groupA">Methods</h4>
+<div class="method">
+<code>Segment* <b>first</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
+<div class="method">
+<code>Segment* <b>last</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
 </body>
 </html>
