--- a/share/manual/measurebase.html
+++ b/share/manual/measurebase.html
@@ -5,6 +5,15 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>MeasureBase</h3>
+<h3 class="object">MeasureBase</h3>
+<h4 class="groupA">Methods</h4>
+<div class="method">
+<code>Measure* <b>nextMeasure</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
+<div class="method">
+<code>Measure* <b>prevMeasure</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
 </body>
 </html>
