--- a/share/manual/note.html
+++ b/share/manual/note.html
@@ -5,10 +5,10 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>Note</h3>
-<h4>Properties</h4>
+<h3 class="object">Note</h3>
+<h4 class="groupB">Properties</h4>
 <div class="tab2">
-<table border="1" rules="all">
+<table border="1" rules="all" cellpadding="0" cellspacing="0">
 <tr><td><code>pitch</code></td><td><code>int</code></td><td>  midi pitch</td></tr>
 <tr><td><code>tpc</code></td><td><code>int</code></td><td>  tonal pitch class</td></tr>
 <tr><td><code>line</code></td><td><code>int</code></td><td>  notehead position</td></tr>
