--- a/share/manual/pageformat.html
+++ b/share/manual/pageformat.html
@@ -5,6 +5,19 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>PageFormat</h3>
+<h3 class="object">PageFormat</h3>
+<h4 class="groupB">Properties</h4>
+<div class="tab2">
+<table border="1" rules="all" cellpadding="0" cellspacing="0">
+<tr><td><code>size</code></td><td><code>QSizeF</code></td><td>     paper size in inch</td></tr>
+<tr><td><code>printableWidth</code></td><td><code>qreal</code></td><td></td></tr>
+<tr><td><code>evenLeftMargin</code></td><td><code>qreal</code></td><td></td></tr>
+<tr><td><code>oddLeftMargin</code></td><td><code>qreal</code></td><td></td></tr>
+<tr><td><code>eventTopMargin</code></td><td><code>qreal</code></td><td></td></tr>
+<tr><td><code>oddTopMargin</code></td><td><code>qreal</code></td><td></td></tr>
+<tr><td><code>evenBottomMargin</code></td><td><code>qreal</code></td><td></td></tr>
+<tr><td><code>oddBottomMargin</code></td><td><code>qreal</code></td><td></td></tr>
+<tr><td><code>twosided</code></td><td><code>bool</code></td><td></td></tr>
+</table></div>
 </body>
 </html>
