--- a/share/manual/qprocess.html
+++ b/share/manual/qprocess.html
@@ -5,6 +5,19 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>QProcess</h3>
+<h3 class="object">QProcess</h3>
+<h4 class="groupA">Methods</h4>
+<div class="method">
+<code>void <b>start</b>(const QString& program)</code>
+</div>
+<div class="mdescr"></div><par/>
+<div class="method">
+<code>bool <b>waitForFinished</b>(int msecs = 30000)</code>
+</div>
+<div class="mdescr"></div><par/>
+<div class="method">
+<code>QByteArray <b>readAllStandardOutput</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
 </body>
 </html>
