--- a/share/manual/rest.html
+++ b/share/manual/rest.html
@@ -5,6 +5,6 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>Rest</h3>
+<h3 class="object">Rest</h3>
 </body>
 </html>
