--- a/share/manual/scoreview.html
+++ b/share/manual/scoreview.html
@@ -5,8 +5,8 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>ScoreView</h3>
-<h4>Methods</h4>
+<h3 class="object">ScoreView</h3>
+<h4 class="groupA">Methods</h4>
 <div class="method">
 <code>void <b>setScore</b>(Score*)</code>
 </div>
@@ -23,9 +23,9 @@
 <code>void <b>prevPage</b>()</code>
 </div>
 <div class="mdescr"></div><par/>
-<h4>Properties</h4>
+<h4 class="groupB">Properties</h4>
 <div class="tab2">
-<table border="1" rules="all">
+<table border="1" rules="all" cellpadding="0" cellspacing="0">
 <tr><td><code>color</code></td><td><code>QColor</code></td><td>    background color</td></tr>
 <tr><td><code>scale</code></td><td><code>qreal</code></td><td>     scaling factor</td></tr>
 </table></div>
