--- a/share/manual/chord.html
+++ b/share/manual/chord.html
@@ -5,8 +5,8 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>Chord</h3>
-<h4>Methods</h4>
+<h3 class="object">Chord</h3>
+<h4 class="groupA">Methods</h4>
 <div class="method">
 <code>virtual <b>void add</b>(Element*)</code>
 </div>
@@ -15,5 +15,10 @@
 <code>virtual <b>void remove</b>(Element*)</code>
 </div>
 <div class="mdescr"></div><par/>
+<h4 class="groupB">Properties</h4>
+<div class="tab2">
+<table border="1" rules="all" cellpadding="0" cellspacing="0">
+<tr><td><code>notes</code></td><td><code>array[Note]</code></td><td>    the list of notes</td></tr>
+</table></div>
 </body>
 </html>
