--- a/share/manual/chordrest.html
+++ b/share/manual/chordrest.html
@@ -5,6 +5,11 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>ChordRest</h3>
+<h3 class="object">ChordRest</h3>
+<h4 class="groupB">Properties</h4>
+<div class="tab2">
+<table border="1" rules="all" cellpadding="0" cellspacing="0">
+<tr><td><code>durationType</code></td><td><code>int</code></td><td></td></tr>
+</table></div>
 </body>
 </html>
