--- a/share/manual/cursor.html
+++ b/share/manual/cursor.html
@@ -5,8 +5,8 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>Cursor</h3>
-<h4>Methods</h4>
+<h3 class="object">Cursor</h3>
+<h4 class="groupA">Methods</h4>
 <div class="method">
 <code>void <b>rewind</b>(int)</code>
 </div>
@@ -24,19 +24,23 @@
 </div>
 <div class="mdescr"></div><par/>
 <div class="method">
+<code>Note* <b>addNote</b>(int pitch)</code>
+</div>
+<div class="mdescr"></div><par/>
+<div class="method">
 <code>void <b>setDuration</b>(int z, int n)</code>
 </div>
 <div class="mdescr"></div><par/>
-<h4>Properties</h4>
+<h4 class="groupB">Properties</h4>
 <div class="tab2">
-<table border="1" rules="all">
+<table border="1" rules="all" cellpadding="0" cellspacing="0">
 <tr><td><code>track</code></td><td><code>int</code></td><td></td></tr>
 <tr><td><code>staffIdx</code></td><td><code>int</code></td><td></td></tr>
 <tr><td><code>voice</code></td><td><code>int</code></td><td></td></tr>
-<tr><td><code>element</code></td><td><code>Element*</code></td><td></td></tr>
-<tr><td><code>segment</code></td><td><code>Segment*</code></td><td></td></tr>
-<tr><td><code>tick</code></td><td><code>int</code></td><td></td></tr>
-<tr><td><code>score</code></td><td><code>Score*</code></td><td></td></tr>
+<tr><td><code>element</code></td><td><code>Element*</code></td><td>     current element at track</td></tr>
+<tr><td><code>segment</code></td><td><code>Segment*</code></td><td>     current segment</td></tr>
+<tr><td><code>tick</code></td><td><code>int</code></td><td>          midi tick position</td></tr>
+<tr><td><code>score</code></td><td><code>Score*</code></td><td>       associated score</td></tr>
 </table></div>
 </body>
 </html>
