--- a/share/manual/harmony.html
+++ b/share/manual/harmony.html
@@ -5,6 +5,13 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>Harmony</h3>
+<h3 class="object">Harmony</h3>
+<h4 class="groupB">Properties</h4>
+<div class="tab2">
+<table border="1" rules="all" cellpadding="0" cellspacing="0">
+<tr><td><code>id</code></td><td><code>int</code></td><td>          harmony identifier</td></tr>
+<tr><td><code>rootTpc</code></td><td><code>int</code></td><td></td></tr>
+<tr><td><code>baseTpc</code></td><td><code>int</code></td><td></td></tr>
+</table></div>
 </body>
 </html>
