--- a/share/manual/score.html
+++ b/share/manual/score.html
@@ -5,8 +5,24 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>Score</h3>
-<h4>Methods</h4>
+<h3 class="object">Score</h3>
+<h4 class="groupA">Methods</h4>
+<div class="method">
+<code>Measure* <b>firstMeasure</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
+<div class="method">
+<code>Measure* <b>lastMeasure</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
+<div class="method">
+<code>Segment* <b>firstSegment</b>(SegmentTypes s = SegAll)</code>
+</div>
+<div class="mdescr"></div><par/>
+<div class="method">
+<code>Segment* <b>lastSegment</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
 <div class="method">
 <code>void <b>doLayout</b>()</code>
 </div>
@@ -31,5 +47,16 @@
 <code>void <b>addText</b>(const QString&, const QString&)</code>
 </div>
 <div class="mdescr"></div><par/>
+<div class="method">
+<code>Cursor* <b>newCursor</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
+<h4 class="groupB">Properties</h4>
+<div class="tab2">
+<table border="1" rules="all" cellpadding="0" cellspacing="0">
+<tr><td><code>name</code></td><td><code>QString</code></td><td>    name of the score</td></tr>
+<tr><td><code>nstaves</code></td><td><code>int</code></td><td>     number of staves</td></tr>
+<tr><td><code>ntracks</code></td><td><code>int</code></td><td>     number of tracks (staves * 4)</td></tr>
+</table></div>
 </body>
 </html>
