--- a/share/manual/segment.html
+++ b/share/manual/segment.html
@@ -5,6 +5,27 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>Segment</h3>
+<h3 class="object">Segment</h3>
+<h4 class="groupA">Methods</h4>
+<div class="method">
+<code>Segment* <b>next</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
+<div class="method">
+<code>Segment* <b>prev</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
+<div class="method">
+<code>Segment* <b>next1</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
+<div class="method">
+<code>Segment* <b>prev1</b>()</code>
+</div>
+<div class="mdescr"></div><par/>
+<div class="method">
+<code>Element* <b>element</b>(int track)</code>
+</div>
+<div class="mdescr"></div><par/>
 </body>
 </html>
