add documentation for plugins->cursor->selection
Former-commit-id: 0d1c4d0786d967652f36fe2ae1db5973fc006d8a

--- a/share/manual/plugins/cursor.html
+++ b/share/manual/plugins/cursor.html
@@ -8,29 +8,29 @@
 <h3 class="object">Cursor</h3>
 <h4 class="groupA">Methods</h4>
 <div class="method">
-<code>void <b>rewind</b>(int)</code>
+<code>void <b>rewind</b>(int type)</code>
 </div>
-<div class="mdescr">rewind to start of score</div><par/>
+<div class="mdescr">
+rewind cursor<br/>
+type=0 rewind to start of score<br/>
+type=1 rewind to start of selection<br/>
+type=2 rewind to end of selection<br/>
+</div>
 <div class="method">
 <code>bool <b>next</b>()</code>
 </div>
-<div class="mdescr"></div><par/>
 <div class="method">
 <code>bool <b>nextMeasure</b>()</code>
 </div>
-<div class="mdescr"></div><par/>
 <div class="method">
 <code>void <b>add</b>(Element*)</code>
 </div>
-<div class="mdescr"></div><par/>
 <div class="method">
 <code>Note* <b>addNote</b>(int pitch)</code>
 </div>
-<div class="mdescr"></div><par/>
 <div class="method">
 <code>void <b>setDuration</b>(int z, int n)</code>
 </div>
-<div class="mdescr"></div><par/>
 <h4 class="groupB">Properties</h4>
 <div class="tab2">
 <table border="1" rules="all" cellpadding="0" cellspacing="0">
