--- a/share/manual/plugins/note.html
+++ b/share/manual/plugins/note.html
@@ -9,11 +9,18 @@
 <h4 class="groupB">Properties</h4>
 <div class="tab2">
 <table border="1" rules="all" cellpadding="0" cellspacing="0">
-<tr><td><code>pitch</code></td><td><code>int</code></td><td>  midi pitch</td></tr>
-<tr><td><code>tpc</code></td><td><code>int</code></td><td>  tonal pitch class</td></tr>
-<tr><td><code>line</code></td><td><code>int</code></td><td>  notehead position</td></tr>
-<tr><td><code>fret</code></td><td><code>int</code></td><td>  fret number in tablature</td></tr>
-<tr><td><code>string</code></td><td><code>int</code></td><td>  string number in tablature</td></tr>
+<tr><td><code>pitch</code></td><td><code>int</code></td><td>   midi pitch</td></tr>
+<tr><td><code>tpc</code></td><td><code>int</code></td><td>   tonal pitch class</td></tr>
+<tr><td><code>line</code></td><td><code>int</code></td><td>   notehead position</td></tr>
+<tr><td><code>fret</code></td><td><code>int</code></td><td>   fret number in tablature</td></tr>
+<tr><td><code>string</code></td><td><code>int</code></td><td>   string number in tablature</td></tr>
+<tr><td><code>subchannel</code></td><td><code>int</code></td><td>   midi subchannel (for midi articulation)</td></tr>
+<tr><td><code>ppitch</code></td><td><code>int</code></td><td>   actual played midi pitch (honoring ottavas)</td></tr>
+<tr><td><code>ghost</code></td><td><code>bool</code></td><td>  ghost note (guitar: death note)</td></tr>
+<tr><td><code>hidden</code></td><td><code>bool</code></td><td>  hidden, not played note</td></tr>
+<tr><td><code>mirror</code></td><td><code>bool</code></td><td>  mirror note head on x axis</td></tr>
+<tr><td><code>small</code></td><td><code>bool</code></td><td>  small note head</td></tr>
+<tr><td><code>tuning</code></td><td><code>qreal</code></td><td> tuning offset in cent</td></tr>
 </table></div>
 </body>
 </html>
