fix scripting regression
Former-commit-id: bd446e523cd09b3f6d283f17a6bdcb286a10cf31

--- a/share/manual/plugins/cursor.html
+++ b/share/manual/plugins/cursor.html
@@ -15,7 +15,7 @@ rewind cursor<br/>
 type=0 rewind to start of score<br/>
 type=1 rewind to start of selection<br/>
 type=2 rewind to end of selection<br/>
-<div/>
+</div>
 <div class="method">
 <code>bool <b>next</b>()</code>
 </div>
@@ -36,7 +36,7 @@ set duration<br/>
 z: numerator<br/>
 n: denominator<br/>
 Quarter, if n == 0<br/>
-<div/>
+</div>
 <h4 class="groupB">Properties</h4>
 <div class="tab2">
 <table border="1" rules="all" cellpadding="0" cellspacing="0">
