--- a/share/manual/plugins/note.html
+++ b/share/manual/plugins/note.html
@@ -21,6 +21,7 @@
 <tr><td><code>mirror</code></td><td><code>bool</code></td><td>  mirror note head on x axis</td></tr>
 <tr><td><code>small</code></td><td><code>bool</code></td><td>  small note head</td></tr>
 <tr><td><code>tuning</code></td><td><code>qreal</code></td><td> tuning offset in cent</td></tr>
+<tr><td><code>veloType</code></td><td><code>enum</code></td><td>  type of veloOffset: MScore.OFFSET_VAL, MScore.USER_VAL</td></tr>
 </table></div>
 </body>
 </html>
