more script bindings; enhanced manual
Former-commit-id: e521b1f60e6c61904735c66a37ae58854660fc73

--- a/share/manual/plugins/chord.html
+++ b/share/manual/plugins/chord.html
@@ -6,6 +6,7 @@
    </head>
 <body>
 <h3 class="object">Chord</h3>
+inherits <a href="chordrest.html">ChordRest</a><br/><br/>
 <h4 class="groupA">Methods</h4>
 <div class="method">
 <code>virtual <b>void add</b>(Element*)</code>
