--- a/share/manual/plugins/cursor.html
+++ b/share/manual/plugins/cursor.html
@@ -26,7 +26,7 @@ type=2 rewind to end of selection<br/>
 <code>void <b>add</b>(Element*)</code>
 </div>
 <div class="method">
-<code>Note* <b>addNote</b>(int pitch)</code>
+<code><a href="note.html">Note </a> <b>addNote</b>(int pitch)</code>
 </div>
 <div class="method">
 <code>void <b>setDuration</b>(int z, int n)</code>
