--- a/share/manual/plugins/measure.html
+++ b/share/manual/plugins/measure.html
@@ -6,12 +6,13 @@
    </head>
 <body>
 <h3 class="object">Measure</h3>
+inherits <a href="measurebase.html">MeasureBase</a><br/><br/>
 <h4 class="groupA">Methods</h4>
 <div class="method">
-<code>Segment* <b>first</b>()</code>
+<code><a href="segment.html">Segment </a> <b>first</b>()</code>
 </div>
 <div class="method">
-<code>Segment* <b>last</b>()</code>
+<code><a href="segment.html">Segment </a> <b>last</b>()</code>
 </div>
 </body>
 </html>
