--- a/share/manual/plugins/measurebase.html
+++ b/share/manual/plugins/measurebase.html
@@ -6,12 +6,13 @@
    </head>
 <body>
 <h3 class="object">MeasureBase</h3>
+inherits <a href="element.html">Element</a><br/><br/>
 <h4 class="groupA">Methods</h4>
 <div class="method">
-<code>Measure* <b>nextMeasure</b>()</code>
+<code><a href="measure.html">Measure </a> <b>nextMeasure</b>()</code>
 </div>
 <div class="method">
-<code>Measure* <b>prevMeasure</b>()</code>
+<code><a href="measure.html">Measure </a> <b>prevMeasure</b>()</code>
 </div>
 </body>
 </html>
