--- a/share/manual/plugins/musescore.html
+++ b/share/manual/plugins/musescore.html
@@ -8,25 +8,25 @@
 <h3 class="object">MuseScore</h3>
 <h4 class="groupA">Methods</h4>
 <div class="method">
-<code>Score* <b>newScore</b>(const QString& name, const QString& part, int measures)</code>
+<code><a href="score.html">Score </a> <b>newScore</b>(const QString& name, const QString& part, int measures)</code>
 </div>
 <div class="method">
-<code>Element* <b>newElement</b>(int)</code>
+<code><a href="element.html">Element </a> <b>newElement</b>(int)</code>
 </div>
 <div class="method">
 <code>void <b>cmd</b>(const QString&)</code>
 </div>
 <div class="method">
-<code>MsProcess* <b>newQProcess</b>()</code>
+<code>MsProcess <b>newQProcess</b>()</code>
 </div>
 <div class="method">
-<code>MsFile* <b>newQFile</b>()</code>
+<code>MsFile <b>newQFile</b>()</code>
 </div>
 <div class="method">
 <code>bool <b>writeScore</b>(Score*, const QString& name, const QString& ext)</code>
 </div>
 <div class="method">
-<code>Score* <b>readScore</b>(const QString& name)</code>
+<code><a href="score.html">Score </a> <b>readScore</b>(const QString& name)</code>
 </div>
 <h4 class="groupB">Properties</h4>
 <div class="tab2">
