--- a/share/manual/plugins/plugins.html
+++ b/share/manual/plugins/plugins.html
@@ -16,6 +16,7 @@
 <li><a href="measurebase.html">MeasureBase</a></li>
 <li><a href="musescore.html">MuseScore</a></li>
 <li><a href="note.html">Note</a></li>
+<li><a href="notedot.html">NoteDot</a></li>
 <li><a href="pageformat.html">PageFormat</a></li>
 <li><a href="part.html">Part</a></li>
 <li><a href="qfile.html">QFile</a></li>
@@ -24,8 +25,11 @@
 <li><a href="score.html">Score</a></li>
 <li><a href="scoreview.html">ScoreView</a></li>
 <li><a href="segment.html">Segment</a></li>
+<li><a href="slur.html">Slur</a></li>
+<li><a href="slurtie.html">SlurTie</a></li>
 <li><a href="staff.html">Staff</a></li>
 <li><a href="text.html">Text</a></li>
+<li><a href="tie.html">Tie</a></li>
 <li><a href="timesig.html">TimeSig</a></li>
 </body>
 </html>
