--- a/share/manual/plugins/score.html
+++ b/share/manual/plugins/score.html
@@ -8,16 +8,16 @@
 <h3 class="object">Score</h3>
 <h4 class="groupA">Methods</h4>
 <div class="method">
-<code>Measure* <b>firstMeasure</b>()</code>
+<code><a href="measure.html">Measure </a> <b>firstMeasure</b>()</code>
 </div>
 <div class="method">
-<code>Measure* <b>lastMeasure</b>()</code>
+<code><a href="measure.html">Measure </a> <b>lastMeasure</b>()</code>
 </div>
 <div class="method">
-<code>Segment* <b>firstSegment</b>(SegmentTypes s = SegAll)</code>
+<code><a href="segment.html">Segment </a> <b>firstSegment</b>(SegmentTypes s = SegAll)</code>
 </div>
 <div class="method">
-<code>Segment* <b>lastSegment</b>()</code>
+<code><a href="segment.html">Segment </a> <b>lastSegment</b>()</code>
 </div>
 <div class="method">
 <code>void <b>doLayout</b>()</code>
@@ -38,7 +38,7 @@
 <code>void <b>addText</b>(const QString&, const QString&)</code>
 </div>
 <div class="method">
-<code>Cursor* <b>newCursor</b>()</code>
+<code><a href="cursor.html">Cursor </a> <b>newCursor</b>()</code>
 </div>
 <h4 class="groupB">Properties</h4>
 <div class="tab2">
