--- a/share/manual/plugins/segment.html
+++ b/share/manual/plugins/segment.html
@@ -6,21 +6,22 @@
    </head>
 <body>
 <h3 class="object">Segment</h3>
+inherits <a href="element.html">Element</a><br/><br/>
 <h4 class="groupA">Methods</h4>
 <div class="method">
-<code>Segment* <b>next</b>()</code>
+<code><a href="segment.html">Segment </a> <b>next</b>()</code>
 </div>
 <div class="method">
-<code>Segment* <b>prev</b>()</code>
+<code><a href="segment.html">Segment </a> <b>prev</b>()</code>
 </div>
 <div class="method">
-<code>Segment* <b>next1</b>()</code>
+<code><a href="segment.html">Segment </a> <b>next1</b>()</code>
 </div>
 <div class="method">
-<code>Segment* <b>prev1</b>()</code>
+<code><a href="segment.html">Segment </a> <b>prev1</b>()</code>
 </div>
 <div class="method">
-<code>Element* <b>element</b>(int track)</code>
+<code><a href="element.html">Element </a> <b>element</b>(int track)</code>
 </div>
 </body>
 </html>
