--- a/share/manual/plugins/note.html
+++ b/share/manual/plugins/note.html
@@ -6,6 +6,20 @@
    </head>
 <body>
 <h3 class="object">Note</h3>
+inherits <a href="element.html">Element</a><br/><br/>
+<h4 class="groupA">Methods</h4>
+<div class="method">
+<code>Accidental <b>accidental</b>()</code>
+</div>
+<div class="method">
+<code><a href="tie.html">Tie </a> <b>tieFor</b>()</code>
+</div>
+<div class="method">
+<code><a href="tie.html">Tie </a> <b>tieBack</b>()</code>
+</div>
+<div class="method">
+<code><a href="notedot.html">NoteDot </a> <b>dot</b>(int n)</code>
+</div>
 <h4 class="groupB">Properties</h4>
 <div class="tab2">
 <table border="1" rules="all" cellpadding="0" cellspacing="0">
@@ -21,7 +35,14 @@
 <tr><td><code>mirror</code></td><td><code>bool</code></td><td>  mirror note head on x axis</td></tr>
 <tr><td><code>small</code></td><td><code>bool</code></td><td>  small note head</td></tr>
 <tr><td><code>tuning</code></td><td><code>qreal</code></td><td> tuning offset in cent</td></tr>
-<tr><td><code>veloType</code></td><td><code>enum</code></td><td>  type of veloOffset: MScore.OFFSET_VAL, MScore.USER_VAL</td></tr>
+<tr><td><code>veloType</code></td><td><code>enum</code></td><td>  OFFSET_VAL, USER_VAL</td></tr>
+<tr><td><code>veloOffset</code></td><td><code>int</code></td><td></td></tr>
+<tr><td><code>onTimeOffset</code></td><td><code>int</code></td><td></td></tr>
+<tr><td><code>onTimeUserOffset</code></td><td><code>int</code></td><td></td></tr>
+<tr><td><code>offTimeOffset</code></td><td><code>int</code></td><td></td></tr>
+<tr><td><code>offTimeUserOffset</code></td><td><code>int</code></td><td></td></tr>
+<tr><td><code>userMirror</code></td><td><code>enum</code></td><td> DH_AUTO, DH_LEFT, DH_RIGHT</td></tr>
+<tr><td><code>dotPosition</code></td><td><code>enum</code></td><td> AUTO, UP, DOWN</td></tr>
 </table></div>
 </body>
 </html>
