--- a/share/manual/plugins/notedot.html
+++ b/share/manual/plugins/notedot.html
@@ -5,7 +5,7 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">Rest</h3>
-inherits <a href="chordrest.html">ChordRest</a><br/><br/>
+<h3 class="object">NoteDot</h3>
+inherits <a href="element.html">Element</a><br/><br/>
 </body>
 </html>
