--- a/share/manual/plugins/text.html
+++ b/share/manual/plugins/text.html
@@ -6,6 +6,7 @@
    </head>
 <body>
 <h3 class="object">Text</h3>
+inherits <a href="simpletext.html">SimpleText</a><br/><br/>
 <h4 class="groupB">Properties</h4>
 <div class="tab2">
 <table border="1" rules="all" cellpadding="0" cellspacing="0">
