--- a/share/manual/plugins/part.html
+++ b/share/manual/plugins/part.html
@@ -5,6 +5,6 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">Part</h3>
+<h3>Part</h3>
 </body>
 </html>
