--- a/share/manual/plugins/plugins.html
+++ b/share/manual/plugins/plugins.html
@@ -10,8 +10,11 @@
 <li><a href="chord.html">Chord</a></li>
 <li><a href="chordrest.html">ChordRest</a></li>
 <li><a href="cursor.html">Cursor</a></li>
+<li><a href="durationelement.html">DurationElement</a></li>
 <li><a href="element.html">Element</a></li>
+<li><a href="fileio.html">FileIO</a></li>
 <li><a href="harmony.html">Harmony</a></li>
+<li><a href="keysig.html">KeySig</a></li>
 <li><a href="measure.html">Measure</a></li>
 <li><a href="measurebase.html">MeasureBase</a></li>
 <li><a href="musescore.html">MuseScore</a></li>
@@ -19,7 +22,6 @@
 <li><a href="notedot.html">NoteDot</a></li>
 <li><a href="pageformat.html">PageFormat</a></li>
 <li><a href="part.html">Part</a></li>
-<li><a href="qfile.html">QFile</a></li>
 <li><a href="qprocess.html">QProcess</a></li>
 <li><a href="rest.html">Rest</a></li>
 <li><a href="score.html">Score</a></li>
@@ -27,6 +29,7 @@
 <li><a href="segment.html">Segment</a></li>
 <li><a href="slur.html">Slur</a></li>
 <li><a href="slurtie.html">SlurTie</a></li>
+<li><a href="spanner.html">Spanner</a></li>
 <li><a href="staff.html">Staff</a></li>
 <li><a href="text.html">Text</a></li>
 <li><a href="tie.html">Tie</a></li>
