--- a/share/manual/plugins/qprocess.html
+++ b/share/manual/plugins/qprocess.html
@@ -5,8 +5,9 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">QProcess</h3>
-<h4 class="groupA">Methods</h4>
+<h3>QProcess</h3>
+<h4>Methods</h4>
+<div class="methods">
 <div class="method">
 <code>void <b>start</b>(const QString& program)</code>
 </div>
@@ -15,6 +16,7 @@
 </div>
 <div class="method">
 <code>QByteArray <b>readAllStandardOutput</b>()</code>
+</div>
 </div>
 </body>
 </html>
