--- a/share/manual/plugins/segment.html
+++ b/share/manual/plugins/segment.html
@@ -5,23 +5,34 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">Segment</h3>
+<h3>Segment</h3>
 inherits <a href="element.html">Element</a><br/><br/>
-<h4 class="groupA">Methods</h4>
+<div class="class-description">
+A segment holds all vertical aligned staff elements.<br/>
+Segments are typed and contain only Elements of the same type.<br/>
+</div>
+<h4>Methods</h4>
+<div class="methods">
 <div class="method">
-<code><a href="segment.html">Segment </a> <b>next</b>()</code>
+<code><a href="segment.html">Segment</a> <b>next</b>()</code>
 </div>
 <div class="method">
-<code><a href="segment.html">Segment </a> <b>prev</b>()</code>
+<code><a href="segment.html">Segment</a> <b>prev</b>()</code>
 </div>
 <div class="method">
-<code><a href="segment.html">Segment </a> <b>next1</b>()</code>
+<code><a href="segment.html">Segment</a> <b>next1</b>()</code>
 </div>
 <div class="method">
-<code><a href="segment.html">Segment </a> <b>prev1</b>()</code>
+<code><a href="segment.html">Segment</a> <b>prev1</b>()</code>
 </div>
 <div class="method">
-<code><a href="element.html">Element </a> <b>element</b>(int track)</code>
+<code><a href="element.html">Element</a> <b>element</b>(int track)</code>
 </div>
+</div>
+<h4>Properties</h4>
+<div class="properties">
+<table cellpadding="0" cellspacing="0">
+<tr><td>subtype</td><td>SegmentType</td><td></td></tr>
+</table></div>
 </body>
 </html>
