--- a/share/manual/plugins/slur.html
+++ b/share/manual/plugins/slur.html
@@ -5,7 +5,7 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">Slur</h3>
+<h3>Slur</h3>
 inherits <a href="slurtie.html">SlurTie</a><br/><br/>
 </body>
 </html>
