--- a/share/manual/plugins/chord.html
+++ b/share/manual/plugins/chord.html
@@ -5,19 +5,21 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">Chord</h3>
+<h3>Chord</h3>
 inherits <a href="chordrest.html">ChordRest</a><br/><br/>
-<h4 class="groupA">Methods</h4>
+<h4>Methods</h4>
+<div class="methods">
 <div class="method">
 <code>virtual <b>void add</b>(Element*)</code>
 </div>
 <div class="method">
 <code>virtual <b>void remove</b>(Element*)</code>
 </div>
-<h4 class="groupB">Properties</h4>
-<div class="tab2">
-<table border="1" rules="all" cellpadding="0" cellspacing="0">
-<tr><td><code>notes</code></td><td><code>array[Note]</code></td><td>    the list of notes</td></tr>
+</div>
+<h4>Properties</h4>
+<div class="properties">
+<table cellpadding="0" cellspacing="0">
+<tr><td>notes</td><td>array[Note]</td><td>    the list of notes</td></tr>
 </table></div>
 </body>
 </html>
