--- a/share/manual/plugins/chordrest.html
+++ b/share/manual/plugins/chordrest.html
@@ -5,12 +5,12 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">ChordRest</h3>
+<h3>ChordRest</h3>
 inherits <a href="durationelement.html">DurationElement</a><br/><br/>
-<h4 class="groupB">Properties</h4>
-<div class="tab2">
-<table border="1" rules="all" cellpadding="0" cellspacing="0">
-<tr><td><code>durationType</code></td><td><code>int</code></td><td></td></tr>
+<h4>Properties</h4>
+<div class="properties">
+<table cellpadding="0" cellspacing="0">
+<tr><td>durationType</td><td>int</td><td></td></tr>
 </table></div>
 </body>
 </html>
