--- a/share/manual/plugins/cursor.html
+++ b/share/manual/plugins/cursor.html
@@ -5,12 +5,13 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">Cursor</h3>
-<h4 class="groupA">Methods</h4>
+<h3>Cursor</h3>
+<h4>Methods</h4>
+<div class="methods">
 <div class="method">
 <code>void <b>rewind</b>(int type)</code>
 </div>
-<div class="mdescr">
+<div class="method-description">
 rewind cursor<br/>
 type=0 rewind to start of score<br/>
 type=1 rewind to start of selection<br/>
@@ -26,27 +27,28 @@ type=2 rewind to end of selection<br/>
 <code>void <b>add</b>(Element*)</code>
 </div>
 <div class="method">
-<code><a href="note.html">Note </a> <b>addNote</b>(int pitch)</code>
+<code><a href="note.html">Note</a> <b>addNote</b>(int pitch)</code>
 </div>
 <div class="method">
 <code>void <b>setDuration</b>(int z, int n)</code>
 </div>
-<div class="mdescr">
+<div class="method-description">
 set duration<br/>
 z: numerator<br/>
 n: denominator<br/>
 Quarter, if n == 0<br/>
 </div>
-<h4 class="groupB">Properties</h4>
-<div class="tab2">
-<table border="1" rules="all" cellpadding="0" cellspacing="0">
-<tr><td><code>track</code></td><td><code>int</code></td><td>          current track</td></tr>
-<tr><td><code>staffIdx</code></td><td><code>int</code></td><td>          current staff (track * 4)</td></tr>
-<tr><td><code>voice</code></td><td><code>int</code></td><td>          current voice (track % 4)</td></tr>
-<tr><td><code>element</code></td><td><code>Element*</code></td><td>     current element at track</td></tr>
-<tr><td><code>segment</code></td><td><code>Segment*</code></td><td>     current segment</td></tr>
-<tr><td><code>tick</code></td><td><code>int</code></td><td>          midi tick position</td></tr>
-<tr><td><code>score</code></td><td><code>Score*</code></td><td>       associated score</td></tr>
+</div>
+<h4>Properties</h4>
+<div class="properties">
+<table cellpadding="0" cellspacing="0">
+<tr><td>track</td><td>int</td><td>          current track</td></tr>
+<tr><td>staffIdx</td><td>int</td><td>          current staff (track * 4)</td></tr>
+<tr><td>voice</td><td>int</td><td>          current voice (track % 4)</td></tr>
+<tr><td>element</td><td>Element*</td><td>     current element at track</td></tr>
+<tr><td>segment</td><td>Segment*</td><td>     current segment</td></tr>
+<tr><td>tick</td><td>int</td><td>          midi tick position</td></tr>
+<tr><td>score</td><td>Score*</td><td>       associated score</td></tr>
 </table></div>
 </body>
 </html>
