--- a/share/manual/plugins/durationelement.html
+++ b/share/manual/plugins/durationelement.html
@@ -5,7 +5,12 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>NoteDot</h3>
+<h3>DurationElement</h3>
 inherits <a href="element.html">Element</a><br/><br/>
+<h4>Properties</h4>
+<div class="properties">
+<table cellpadding="0" cellspacing="0">
+<tr><td>duration</td><td>int</td><td>     duration in ticks</td></tr>
+</table></div>
 </body>
 </html>
