--- a/share/manual/plugins/harmony.html
+++ b/share/manual/plugins/harmony.html
@@ -5,14 +5,14 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">Harmony</h3>
+<h3>Harmony</h3>
 inherits <a href="text.html">Text</a><br/><br/>
-<h4 class="groupB">Properties</h4>
-<div class="tab2">
-<table border="1" rules="all" cellpadding="0" cellspacing="0">
-<tr><td><code>id</code></td><td><code>int</code></td><td>          harmony identifier</td></tr>
-<tr><td><code>rootTpc</code></td><td><code>int</code></td><td></td></tr>
-<tr><td><code>baseTpc</code></td><td><code>int</code></td><td></td></tr>
+<h4>Properties</h4>
+<div class="properties">
+<table cellpadding="0" cellspacing="0">
+<tr><td>id</td><td>int</td><td>          harmony identifier</td></tr>
+<tr><td>rootTpc</td><td>int</td><td>     root note as "tonal pitch class"</td></tr>
+<tr><td>baseTpc</td><td>int</td><td>     bass note as "tonal pitch class"</td></tr>
 </table></div>
 </body>
 </html>
