--- a/share/manual/plugins/keysig.html
+++ b/share/manual/plugins/keysig.html
@@ -5,15 +5,18 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>MeasureBase</h3>
+<h3>KeySig</h3>
 inherits <a href="element.html">Element</a><br/><br/>
+<div class="class-description">
+The KeySig class represents a Key Signature on a staff<br/>
+</div>
 <h4>Methods</h4>
 <div class="methods">
 <div class="method">
-<code><a href="measure.html">Measure</a> <b>nextMeasure</b>()</code>
+<code>int <b>keySignature</b>()</code>
 </div>
-<div class="method">
-<code><a href="measure.html">Measure</a> <b>prevMeasure</b>()</code>
+<div class="method-description">
+-7 (flats) -- +7 (sharps)<br/>
 </div>
 </div>
 </body>
