--- a/share/manual/plugins/measure.html
+++ b/share/manual/plugins/measure.html
@@ -5,14 +5,16 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">Measure</h3>
+<h3>Measure</h3>
 inherits <a href="measurebase.html">MeasureBase</a><br/><br/>
-<h4 class="groupA">Methods</h4>
+<h4>Methods</h4>
+<div class="methods">
 <div class="method">
-<code><a href="segment.html">Segment </a> <b>first</b>()</code>
+<code><a href="segment.html">Segment</a> <b>first</b>()</code>
 </div>
 <div class="method">
-<code><a href="segment.html">Segment </a> <b>last</b>()</code>
+<code><a href="segment.html">Segment</a> <b>last</b>()</code>
+</div>
 </div>
 </body>
 </html>
