--- a/share/manual/plugins/musescore.html
+++ b/share/manual/plugins/musescore.html
@@ -5,13 +5,14 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">MuseScore</h3>
-<h4 class="groupA">Methods</h4>
+<h3>MuseScore</h3>
+<h4>Methods</h4>
+<div class="methods">
 <div class="method">
-<code><a href="score.html">Score </a> <b>newScore</b>(const QString& name, const QString& part, int measures)</code>
+<code><a href="score.html">Score</a> <b>newScore</b>(const QString& name, const QString& part, int measures)</code>
 </div>
 <div class="method">
-<code><a href="element.html">Element </a> <b>newElement</b>(int)</code>
+<code><a href="element.html">Element</a> <b>newElement</b>(int)</code>
 </div>
 <div class="method">
 <code>void <b>cmd</b>(const QString&)</code>
@@ -20,28 +21,26 @@
 <code>MsProcess <b>newQProcess</b>()</code>
 </div>
 <div class="method">
-<code>MsFile <b>newQFile</b>()</code>
-</div>
-<div class="method">
 <code>bool <b>writeScore</b>(Score*, const QString& name, const QString& ext)</code>
 </div>
 <div class="method">
-<code><a href="score.html">Score </a> <b>readScore</b>(const QString& name)</code>
+<code><a href="score.html">Score</a> <b>readScore</b>(const QString& name)</code>
 </div>
-<h4 class="groupB">Properties</h4>
-<div class="tab2">
-<table border="1" rules="all" cellpadding="0" cellspacing="0">
-<tr><td><code>menuPath</code></td><td><code>QString</code></td><td></td></tr>
-<tr><td><code>pluginType</code></td><td><code>QString</code></td><td></td></tr>
-<tr><td><code>dockArea</code></td><td><code>QString</code></td><td></td></tr>
-<tr><td><code>division</code></td><td><code>int</code></td><td></td></tr>
-<tr><td><code>mscoreVersion</code></td><td><code>int</code></td><td></td></tr>
-<tr><td><code>mscoreMajorVersion</code></td><td><code>int</code></td><td></td></tr>
-<tr><td><code>mscoreMinorVersion</code></td><td><code>int</code></td><td></td></tr>
-<tr><td><code>mscoreUpdateVersion</code></td><td><code>int</code></td><td></td></tr>
-<tr><td><code>mscoreDPI</code></td><td><code>qreal</code></td><td></td></tr>
-<tr><td><code>curScore</code></td><td><code>Score*</code></td><td></td></tr>
-<tr><td><code>scores</code></td><td><code>array[Score]</code></td><td></td></tr>
+</div>
+<h4>Properties</h4>
+<div class="properties">
+<table cellpadding="0" cellspacing="0">
+<tr><td>menuPath</td><td>QString</td><td>        where the plugin is placed in menu</td></tr>
+<tr><td>pluginType</td><td>QString</td><td></td></tr>
+<tr><td>dockArea</td><td>QString</td><td></td></tr>
+<tr><td>division</td><td>int</td><td>            number of MIDI ticks for 1/4 note, read only</td></tr>
+<tr><td>mscoreVersion</td><td>int</td><td>            the complete version number of MuseScore in the form: MMmmuu, read only</td></tr>
+<tr><td>mscoreMajorVersion</td><td>int</td><td>            the 1st part of the MuseScore version, read only</td></tr>
+<tr><td>mscoreMinorVersion</td><td>int</td><td>            the 2nd part of the MuseScore version, read only</td></tr>
+<tr><td>mscoreUpdateVersion</td><td>int</td><td>            the 3rd part of the MuseScore version, read only</td></tr>
+<tr><td>mscoreDPI</td><td>qreal</td><td>          read only</td></tr>
+<tr><td>curScore</td><td>Score*</td><td>         the current score, if any, read only</td></tr>
+<tr><td>scores</td><td>array[Score]</td><td>   all currently open scores, read only</td></tr>
 </table></div>
 </body>
 </html>
