--- a/share/manual/plugins/rest.html
+++ b/share/manual/plugins/rest.html
@@ -5,7 +5,10 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">Rest</h3>
+<h3>Rest</h3>
 inherits <a href="chordrest.html">ChordRest</a><br/><br/>
+<div class="class-description">
+This class implements a rest.<br/>
+</div>
 </body>
 </html>
