--- a/share/manual/plugins/slurtie.html
+++ b/share/manual/plugins/slurtie.html
@@ -5,7 +5,7 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">SlurTie</h3>
+<h3>SlurTie</h3>
 inherits <a href="spanner.html">Spanner</a><br/><br/>
 </body>
 </html>
