--- a/share/manual/plugins/spanner.html
+++ b/share/manual/plugins/spanner.html
@@ -5,16 +5,16 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3>TimeSig</h3>
+<h3>Spanner</h3>
 inherits <a href="element.html">Element</a><br/><br/>
 <div class="class-description">
-This class represents a time signature.<br/>
+Virtual base class for slurs, ties, lines etc.<br/>
 </div>
 <h4>Properties</h4>
 <div class="properties">
 <table cellpadding="0" cellspacing="0">
-<tr><td>zText</td><td>QString</td><td>  text of numerator</td></tr>
-<tr><td>nText</td><td>QString</td><td>  text of denominator</td></tr>
+<tr><td>startElement</td><td>Element*</td><td></td></tr>
+<tr><td>endElement</td><td>Element*</td><td></td></tr>
 </table></div>
 </body>
 </html>
