--- a/share/manual/plugins/text.html
+++ b/share/manual/plugins/text.html
@@ -5,12 +5,11 @@
    <link rel="stylesheet" type="text/css" href="manual.css"/>
    </head>
 <body>
-<h3 class="object">Text</h3>
-inherits <a href="simpletext.html">SimpleText</a><br/><br/>
-<h4 class="groupB">Properties</h4>
-<div class="tab2">
-<table border="1" rules="all" cellpadding="0" cellspacing="0">
-<tr><td><code>text</code></td><td><code>QString</code></td><td></td></tr>
+<h3>Text</h3>
+<h4>Properties</h4>
+<div class="properties">
+<table cellpadding="0" cellspacing="0">
+<tr><td>text</td><td>QString</td><td></td></tr>
 </table></div>
 </body>
 </html>
