--- a/share/manual/plugins/timesig.html
+++ b/share/manual/plugins/timesig.html
@@ -15,6 +15,7 @@ This class represents a time signature.<br/>
 <table cellpadding="0" cellspacing="0">
 <tr><td>zText</td><td>QString</td><td>  text of numerator</td></tr>
 <tr><td>nText</td><td>QString</td><td>  text of denominator</td></tr>
+<tr><td>sig</td><td>QString</td><td>  time signature "3/4"</td></tr>
 </table></div>
 </body>
 </html>
