--- a/share/manual/plugins/slurtie.html
+++ b/share/manual/plugins/slurtie.html
@@ -7,5 +7,11 @@
 <body>
 <h3>SlurTie</h3>
 inherits <a href="spanner.html">Spanner</a><br/><br/>
+<h4>Properties</h4>
+<div class="properties">
+<table cellpadding="0" cellspacing="0">
+<tr><td>lineType</td><td>int</td><td>         0 - solid, 1 - dotted, 2 - dashed</td></tr>
+<tr><td>slurDirection</td><td>Direction</td><td>   AUTO, UP, DOWN</td></tr>
+</table></div>
 </body>
 </html>
